--- a/dom/css/flappy.css
+++ b/dom/css/flappy.css
@@ -84,3 +84,26 @@
   background-color: deepskyblue;
   transform: translate(-50%, -50%) scale(1.1);
 }
+
+.start {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 15px 30px;
+  font-size: 34px;
+  font-family: Pixel, sans-serif;
+  cursor: pointer;
+  display: block; /* visível no início */
+  z-index: 100;
+  background-color: dodgerblue;
+  color: white;
+  border: 2px solid #000;
+  border-radius: 10px;
+  transition: transform 0.2s, background-color 0.2s;
+}
+
+.start:hover {
+  background-color: deepskyblue;
+  transform: translate(-50%, -50%) scale(1.1);
+}
