--- a/dom/css/estilo.css
+++ b/dom/css/estilo.css
@@ -5,51 +5,109 @@
 
 * {
   font-family: "Oswald", sans-serif;
+  box-sizing: border-box;
 }
 
-html {
-  height: 100%;
-}
-
+html,
 body {
   margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
   background-color: #0d262d;
   color: #fff;
-  height: 100%;
 }
 
 .conteudo {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
   min-height: 100%;
+  padding: 20px;
 }
 
 .exercicio div {
-  font-size: 3em;
-  border: solid 5px #fff;
+  font-size: 2em;
+  border: 5px solid #fff;
   padding: 20px 40px;
   margin: 10px;
+  width: 90%;
+  max-width: 600px;
+  text-align: center;
+  border-radius: 10px;
 }
 
 .exercicio div:nth-of-type(1) {
   background-color: darkgoldenrod;
 }
-
 .exercicio div:nth-of-type(2) {
   background-color: crimson;
 }
-
 .exercicio div:nth-of-type(3) {
   background-color: darkcyan;
 }
-
 .exercicio div:nth-of-type(4) {
   background-color: darkorchid;
 }
 
 .exercicio .destaque {
-  border: solid 10px greenyellow;
+  border: 10px solid greenyellow;
   color: greenyellow;
   font-weight: bold;
+}
+
+.menu-principal {
+  width: 100%;
+  max-width: 800px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.menu-principal h1 {
+  background: #333;
+  color: #fff;
+  border-bottom: 5px solid #4faddb;
+  padding: 15px 0;
+  margin: 0;
+}
+
+.menu-principal nav {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  background-color: #fff;
+  margin: 5px 0;
+  padding: 5px 0;
+}
+
+.menu-principal a {
+  display: block;
+  padding: 10px 20px;
+  text-decoration: none;
+  color: #222;
+  font-size: 1.1em;
+  margin: 5px;
+  border-radius: 5px;
+  transition: background-color 0.2s;
+}
+
+.menu-principal a:hover {
+  background-color: rgba(79, 173, 219, 0.4);
+}
+
+@media (max-width: 768px) {
+  .exercicio div {
+    font-size: 1.6em;
+    padding: 15px 20px;
+  }
+
+  .menu-principal nav {
+    flex-direction: column;
+  }
+
+  .menu-principal a {
+    font-size: 1em;
+    padding: 10px;
+  }
 }
