--- a/dom/css/flappy.css
+++ b/dom/css/flappy.css
@@ -97,25 +97,26 @@
 
 @media (max-width: 600px) {
   [wm-flappy] {
-    height: 50vh;
-    width: 90vw;
+    height: 75vh;
+    width: 95vw;
+    margin: 2.5vh auto;
   }
 
   .barreira .borda {
-    width: 15vw;
+    width: 18vw;
   }
 
   .barreira .corpo {
-    width: 12vw;
+    width: 15vw;
   }
 
   .progresso {
-    font-size: 10vw;
+    font-size: 12vw;
   }
 
   .restart,
   .start {
-    font-size: 6vw;
-    padding: 3vh 5vw;
+    font-size: 7vw;
+    padding: 4vh 6vw;
   }
 }
